# i2c-designware

./: Cargo.toml
dw-apb-i2c/: Cargo.toml
dw-apb-i2c/src/: lib.rs
i2c-common/: Cargo.toml
i2c-common/src/: lib.rs  timing.rs
linux/: Makefile
linux/i2c-dw-plat/: Cargo.toml
linux/i2c-dw-plat/src/: lib.rs
src/: common.rs  core.rs  lib.rs  master.rs  registers.rs
src/common/: functionality.rs  mod.rs  timing.rs
src/osl/: .error.rs.swp  .mod.rs.swp  error.rs  mod.rs
src/osl/linux/: error.rs
