[package]
name = "dw_apb_i2c"
version = "0.1.0"
edition = "2021"
authors = ["Guoweikang <guoweikang.kernel@gmail.com>"]
description = "Synopsys DesignWare I2C driver"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = ""
repository = "https://github.com/guoweikang/i2c-designware.git"

[features]
linux=["osl/linux"]
arceos=["osl/arceos"]
default=["linux"]

[dependencies]
tock-registers = "0.8"
bitflags = "2.5.0"
# release use repo
i2c_common = { path = "../i2c-common/"}
osl = {path = "../../../../rust/osl"}
