[package]
name = "dw_apb_i2c"
version = "0.1.0"
edition = "2021"
authors = ["Guoweikang <guoweikang.kernel@gmail.com>"]
description = "Synopsys DesignWare I2C driver"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = ""
repository = "https://github.com/guoweikang/i2c-designware.git"

[features]
linux=["osl/linux"]
arceos=["osl/arceos"]

[dependencies]
tock-registers = "0.9"
bitflags = "2.5.0"
osl = {git = "https://github.com/guoweikang/osl.git", default-features = false}
