[package]
name = "i2c_common"
version = "0.1.0"
edition = "2021"
authors = ["Guoweikang <guoweikang.kernel@gmail.com>"]
description = "I2C common module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = ""
repository = "https://github.com/guoweikang/i2c-common.git"

[dependencies]
log = "0.4"
tock-registers = "0.8"
